Changed liveness md file